--- a/MHughesSharkGame.html
+++ b/MHughesSharkGame.html
@@ -14,7 +14,15 @@
 </head>
 <body onload="init()">
     <h1>Meg's Shark Game</h1>
-    <p>Move the shark to eat the food and avoid the trash!</p>
+    <p>Eat fish for energy, but avoid the trash because it steals your energy!</p>
+	<p>Use Left, Right, Up and Down to move the shark.  Pressing the space bar will give you a burst of speed, but uses energy!</p>
+
+	<div id="reset">
+		<button type="button"
+				onclick="restart()">
+			Restart
+		</button>
+	</div>
 
 </body>
 </html>
